--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Installs NPM package by finding it and copying from another local folder. Completely offline ;)",
   "main": "src/copi.js",
   "bin": {
-    "copi": "bin/copy.js"
+    "copi": "bin/copi.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
