--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "copi": "bin/copi.js"
   },
   "scripts": {
-    "test": "npm run lint",
+    "test": "node --harmony node_modules/.bin/rocha src/*-spec.js",
     "lint": "standard bin/*.js src/*.js",
     "commit": "commit-wizard"
   },
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "pre-git": "3.1.2",
+    "rocha": "1.6.1",
     "standard": "5.4.1"
   },
   "config": {
