--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "check-more-types": "2.10.0",
     "glob-promise": "1.0.4",
     "lazy-ass": "1.3.0",
+    "semver": "5.1.0",
     "simple-bin-help": "1.5.0"
   },
   "devDependencies": {
