--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "homepage": "https://github.com/bahmutov/copi#readme",
   "dependencies": {
     "check-more-types": "2.10.0",
+    "debug": "2.2.0",
     "glob-promise": "1.0.4",
     "lazy-ass": "1.3.0",
     "semver": "5.1.0",
