--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "debug": "2.2.0",
     "glob-promise": "1.0.4",
     "lazy-ass": "1.3.0",
+    "npm-utils": "1.1.0",
     "semver": "5.1.0",
     "simple-bin-help": "1.5.0"
   },
