--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "test": "node --harmony node_modules/.bin/rocha src/*-spec.js",
     "lint": "standard bin/*.js src/*.js",
     "commit": "commit-wizard",
-    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post",
+    "issues": "git-issues"
   },
   "repository": {
     "type": "git",
@@ -34,15 +35,16 @@
     "debug": "2.2.0",
     "glob-promise": "1.0.4",
     "lazy-ass": "1.3.0",
-    "npm-utils": "1.1.0",
+    "npm-utils": "1.2.0",
     "semver": "5.1.0",
     "simple-bin-help": "1.5.0"
   },
   "devDependencies": {
+    "git-issues": "1.2.0",
     "pre-git": "3.1.2",
     "rocha": "1.6.1",
-    "standard": "5.4.1",
-    "semantic-release": "^4.3.5"
+    "semantic-release": "^4.3.5",
+    "standard": "5.4.1"
   },
   "config": {
     "pre-git": {
