--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
   "dependencies": {
     "check-more-types": "2.10.0",
     "debug": "2.2.0",
+    "express": "4.13.3",
     "glob-promise": "1.0.4",
     "lazy-ass": "1.3.0",
+    "morgan": "1.6.1",
     "npm-utils": "1.2.0",
     "semver": "5.1.0",
     "simple-bin-help": "1.5.0"
