--- a/package.json
+++ b/package.json
@@ -39,19 +39,19 @@
     "bluebird": "3.1.1",
     "check-more-types": "2.10.0",
     "debug": "2.2.0",
-    "express": "4.13.3",
+    "express": "5.0.0-alpha.2",
     "glob-promise": "1.0.4",
     "lazy-ass": "1.3.0",
     "morgan": "1.6.1",
-    "npm-utils": "1.3.2",
+    "npm-utils": "1.3.3",
     "semver": "5.1.0",
-    "simple-bin-help": "1.5.0"
+    "simple-bin-help": "1.5.1"
   },
   "devDependencies": {
     "git-issues": "1.2.0",
     "pre-git": "3.1.2",
     "rocha": "1.6.1",
-    "semantic-release": "^4.3.5",
+    "semantic-release": "6.0.3",
     "standard": "5.4.1"
   },
   "files": [
